# healthcare-surge-strain

./: LICENSE  Makefile  README.md  pyproject.toml
healthcare_demand/: __init__.py  dataset.py  features.py  plots.py
healthcare_demand/modeling/: predict.py  train.py
notebooks/: 0.1-ams-initial-exploration.ipynb  0.2-ams-preprocessing-modeling.ipynb
notebooks/Archive/: Seasonal Naive Baseline Code.ipynb
references/: clean_data_dictionary.csv  clean_data_dictionary_metadata.csv
