[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "healthcare_demand"
version = "0.0.1"
description = "This is a time-series diagnostic analysis of temporal lags in healthcare demand during known public health emergencies in Bangladesh."
authors = [
  { name = "Allison M. Schiltz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["healthcare_demand"]
include = ["pyproject.toml", "healthcare_demand/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["healthcare_demand"]
force-sort-within-sections = true

